Fixed layout bug when title is short. Also, an IE fix for misplaced histograms & non-transparent drag hands.

--- a/public/stylesheets/camera.css
+++ b/public/stylesheets/camera.css
@@ -262,10 +262,10 @@ div.rowdiv {
   margin-top: 0;
 }
 .sv .nbsingle .price {
-  margin: 0 10px 0 10px;
+/*  margin: 0 10px 0 10px; */
   position: relative;
-  left: 55px;
-  top: 0;
+  left: 50px;
+  top: 10px;
 }
 .bottombar {
 	height: 18px;
@@ -340,6 +340,10 @@ div.rowdiv {
 	margin-top: 18px;
 }
 
+.sv .itemfeatures {
+    margin-top: 0;
+}
+
 .itemfeatures {
 /*	font-size: 0.8em; */
   font-size: 12px;
@@ -349,12 +353,18 @@ div.rowdiv {
 	margin-top: 5px;
 }
 
+.itemtitle {
+    font-size: 1.2em;
+    padding-bottom:5px;
+}
+
 .priceunit {
   font-size: 0.8em;
 /*  display:inline; */
   position:relative;
-  left: 55px;
+  left: 50px;
   margin-left: 5px;
+  top: 10px;
 }
 
 .nbsingle .itemfeatures {
@@ -641,6 +651,7 @@ div.smalldesc {
 	left: 7px;
 	top: 16px;
 }
+
 
 /*--------------------------------------//
 //                Survey                //
